@@ -1,3 +1,7 @@
+2010-03-01  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/atomicfwd_cxx.h: Add typedefs to group.
+
 2010-03-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	PR libstdc++/32499
